Bug 1861716 - Ensure we don't try to apply text-indent within ruby text container frame. r=TYLin

Differential Revision: https://phabricator.services.mozilla.com/D192164